home-tools-service/kubernetes/home-tools-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-tools-api-deployment
spec:
  selector:
    matchLabels:
      app: home-tools-api-deployment
  replicas: #{REPLICAS}#
  template:
    metadata:
      labels:
        app: home-tools-api-deployment
    spec:
      containers:
      - name: home-tools-api
        image: #{REPOSITORY}#:#{TAG}#
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: home-tools-api-service
  labels:
    app: home-tools-api-service
spec:
  selector:
    app: home-tools-api-deployment
  ports:
  - name: http
    port: 3000
    protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-tools-api-ingress
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - #{INGRESS_HOST}#
    secretName: home-tools-api-tls
  rules:
  - host: #{INGRESS_HOST}#
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: home-tools-service
            port:
              number: 3000
